<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/light"
    tools:context=".LightsActivity" >

    <Switch
        android:id="@+id/sLightsAll"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:text="@string/all" />
    
    <Switch
        android:id="@+id/sLightsRoom"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sLightsAll"
        android:layout_below="@+id/sLightsAll"
        android:layout_marginTop="25dp"
        
        android:text="@string/room" />

    <Switch
        android:id="@+id/sLightsLivingRoom"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sLightsRoom"
        android:layout_below="@+id/sLightsRoom"
        android:layout_marginTop="25dp"
        
        android:text="@string/livingroom" />

    <Switch
        android:id="@+id/sLightsTVRoom"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/sLightsLivingRoom"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        
        android:text="@string/tvroom" />

    <Switch
        android:id="@+id/sLightsKitchen"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sLightsTVRoom"
        android:layout_below="@+id/sLightsTVRoom"
        android:layout_marginTop="25dp"
        
        android:text="@string/kitchen" />

    <Switch
        android:id="@+id/sLightsSinkFridge"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sLightsKitchen"
        android:layout_below="@+id/sLightsKitchen"
        android:layout_marginTop="25dp"
        
        android:text="@string/sinkfridge" />

    <Switch
        android:id="@+id/sLightsKitchenOvenCooktop"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sLightsSinkFridge"
        android:layout_below="@+id/sLightsSinkFridge"
        android:layout_marginTop="25dp"
        
        android:text="@string/kitchenovencooktop" />

    <Switch
        android:id="@+id/sLightsToilet"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sLightsKitchenOvenCooktop"
        android:layout_below="@+id/sLightsKitchenOvenCooktop"
        android:layout_marginTop="25dp"
        
        android:text="@string/toilet" />

</RelativeLayout>