<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".BlindsActivity" >
    
	<Switch
        android:id="@+id/sBlindsAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all" />

    <Switch
        android:id="@+id/sBlindsRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room" />

    <Switch
        android:id="@+id/sBlindsLivingRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/livingroom" />

    <Switch
        android:id="@+id/sBlindsKitchen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kitchen" />

</LinearLayout>
